# datamate

./: __init__.py  dataset.py  pyproject.toml
datamate/: dataset.py  validate_data.py
datamate.egg-info/: PKG-INFO  SOURCES.txt
datamate/tests/: test_dataset.py  test_validate_data.py
