[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datamate"
version = "0.1.0"
description = "A Python library for statistical assumption testing and validation."
authors = [{ name = "Patrick" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "statsmodels",
]